--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>2.17.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
